it creates the table for one way still work in progress for minutes above 60

--- a/index.html
+++ b/index.html
@@ -42,28 +42,8 @@
                         <th colspan="10">Minutes to Jaegersborg</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>Naerum inserted</td>
-                        <td>1 inserted</td>
-                        <td>2 inserted</td>
-                        <td>3 inserted</td>
-                        <td>4 inserted</td>
-                    </tr>
-                    <tr>
-                        <td>Naerum inserted</td>
-                        <td>1 inserted</td>
-                        <td>2 inserted</td>
-                        <td>3 inserted</td>
-                        <td>4 inserted</td>
-                    </tr>
-                    <tr>
-                        <td>Naerum inserted</td>
-                        <td>1 inserted</td>
-                        <td>2 inserted</td>
-                        <td>3 inserted</td>
-                        <td>4 inserted</td>
-                    </tr>
+                <tbody id="table-body">
+                    
                 </tbody>
             </table>
 
