table style (a bit)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/playground-style.css">
     <link rel="stylesheet" type="text/css" href="styles/content-style.css">
     <link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
+    <link rel="stylesheet" type="text/css" href="styles/table-style.css">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
                 <thead>
                     <tr>
                         <th>Stations</th>
-                        <th colspan="10">Minutes to Jaegersborg</th>
+                        <th colspan="60">Every hour towars Jaegersborg</th>
                     </tr>
                 </thead>
                 <tbody id="table-body">
