--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="styles/content-style.css">
     <link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
     <link rel="stylesheet" type="text/css" href="styles/table-style.css">
+    <link rel="stylesheet" type="text/css" href="styles/live-map-style.css">
+    <link rel="stylesheet" type="text/css" href="styles/live-train-style.css">
 </head>
 
 <body>
@@ -33,6 +35,8 @@
         <button class="nav-btn" id="livemap-btn">Live map</button>
     </div>
     <div id="content-div">
+
+
         <div class="content-page" id="timetable-main-div">
             <h>Timetable</h>
 
@@ -44,16 +48,28 @@
                     </tr>
                 </thead>
                 <tbody id="table-body">
-                    
+
                 </tbody>
             </table>
 
         </div>
 
+
         <div class="content-page" id="livemap-main-div">
             <h>Live map</h><br>
-            <img src="images/metro_map_01.jpg">
+            <div id="live-map-canvas">
+                <div id="mini-train-canvas">
+                    <div class="mini-train-div">
+                        <img class="mini-train" src="images/lokaltog_02.svg">
+                    </div>
+                </div>
+                <div id="train-line">
+
+                </div>
+            </div>
         </div>
+
+
     </div>
     <script type="module" src="main.js"></script>
 </body>
