getting data about moving trains based on schedule

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         <div class="content-page" id="livemap-main-div">
             <h>Live map</h><br>
             <div id="live-map-canvas">
-                <div id="mini-train-canvas">
+                <div class="mini-train-canvas">
                     <div class="mini-train-div">
                         <img class="mini-train" src="images/lokaltog_02.svg">
                     </div>
                 </div>
+
                 <div id="train-line">
 
                 </div>
@@ -72,6 +73,7 @@
 
     </div>
     <script type="module" src="main.js"></script>
+    <script src="node_modules/moment/min/moment.min.js"></script>
 </body>
 
 </html>
