designing the trains on map also placing them accordingly on the map

--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
         <div class="content-page" id="livemap-main-div">
             <h>Live map</h><br>
             <div id="live-map-canvas">
-                <div class="mini-train-canvas">
-                    <div class="mini-train-div">
-                        <img class="mini-train" src="images/lokaltog_02.svg">
-                    </div>
+                <div id="mini-train-canvas">
+                    <!-- INSERTED TRAINS -->
                 </div>
 
                 <div id="train-line">
@@ -73,7 +71,7 @@
 
     </div>
     <script type="module" src="main.js"></script>
-    <script src="node_modules/moment/min/moment.min.js"></script>
+    <script src="node_modules/moment/moment.js"></script>
 </body>
 
 </html>
