script link added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
     </div>
     <script type="module" src="main.js"></script>
+    <script src="node_modules/moment/min/moment.min.js"></script>
     <script src="node_modules/moment/moment.js"></script>
 </body>
 
