another live map (offline)

--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
         <!-- <button class="nav-btn" id="move-tog-btn">MOVE!!!</button> -->
         <button class="nav-btn" id="timetable-btn">Timetable</button>
         <button class="nav-btn" id="livemap-btn">Live map</button>
+        <button class="nav-btn" id="livemap2-btn">Live map 2</button>
     </div>
     <div id="content-div">
 
 
         <div class="content-page" id="timetable-main-div">
-            <h>Timetable</h>
-
             <table id="time-table">
                 <thead>
                     <tr>
@@ -56,13 +55,25 @@
 
 
         <div class="content-page" id="livemap-main-div">
-            <h>Live map</h><br>
             <div id="live-map-canvas">
                 <div id="mini-train-canvas">
                     <!-- INSERTED TRAINS -->
                 </div>
 
                 <div id="train-line">
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="content-page" id="livemap2-main-div">
+            <div id="live-map2-canvas">
+                <div id="mini-train2-canvas">
+                    <!-- INSERTED TRAINS -->
+                </div>
+
+                <div id="train-line2">
 
                 </div>
             </div>
