started to create a new offline map

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="styles/content-style.css">
     <link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
     <link rel="stylesheet" type="text/css" href="styles/table-style.css">
-    <link rel="stylesheet" type="text/css" href="styles/live-map-style.css">
     <link rel="stylesheet" type="text/css" href="styles/live-train-style.css">
+    <link rel="stylesheet" type="text/css" href="styles/live-map-style.css">
 </head>
 
 <body>
@@ -70,11 +70,65 @@
         <div class="content-page" id="livemap2-main-div">
             <div id="live-map2-canvas">
                 <div id="mini-train2-canvas">
-                    <!-- INSERTED TRAINS -->
+
                 </div>
 
                 <div id="train-line2">
-
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station1</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station2</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station3</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station4</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station5</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station6</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                            <div class="station-line2"></div>
+                        </div>
+                        <p class="station-name2">Station7</p>
+                    </div>
+                    <div class="station2">
+                        <div class="draw-st">
+                            <div class="station-point2"></div>
+                        </di2v>
+                        <p class="station-name2">Station8</p>
+                    </div>
                 </div>
             </div>
         </div>
